fixed shifting on gameover

--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,10 @@ body {
   display: block;
   width: 50%;
   margin: auto;
-
 }
 
 .btn {
-  margin: 25px;
+  margin: 0 30px;
   display: inline-block;
   height: 200px;
   width: 200px;
@@ -27,17 +26,13 @@ body {
 }
 
 .btn-small {
-  position: absolute;
-  left: 45.5%;
-  top: 43.5%;
+  display: inline-block;
+  left: 200px;
+  top: 200px;
   height: 50px;
   width: 50px;
-  border: 10px solid black;
+  border: 5px solid black;
   border-radius: 100%;
-}
-
-.btn-container {
-  position: relative;
 }
 
 .game-over {
